--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "start": "node server.js",
-    "postinstall": "ng build --aot",
+    "postinstall": "ng build --aot"
   },
   "private": true,
   "dependencies": {
