--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@angular/material": "^8.2.3",
     "@angular/platform-browser": "~8.2.0",
     "@angular/platform-browser-dynamic": "~8.2.0",
+    "@angular/pwa": "^0.803.17",
     "@angular/router": "~8.2.0",
+    "@angular/service-worker": "~8.2.0",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
     "bootstrap": "^4.3.1",
