--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "bootstrap": "^4.3.1",
     "express": "^4.17.1",
     "ng-lazyload-image": "^7.0.1",
+    "ngx-device-detector": "^1.3.14",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "typescript": "~3.5.3",
